# ddlog_bench

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  generator.py  query.dl
src/: main.rs
updates/: chain_combine_half.csv  chain_combine_quarter.csv  chain_insert_root.csv  chain_remove_root.csv  chain_split_half.csv  chain_split_quarter.csv  multiple_insert_root.csv  multiple_remove_root.csv  single_insert_root.csv  single_remove_root.csv
